--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -85,6 +85,7 @@
   "logoutFailed": "Logout failed!",
   "common": {
     "actions": "Actions",
+    "view": "View",
     "edit": "Edit",
     "cancel": "Cancel",
     "yes": "Yes",
@@ -95,6 +96,7 @@
     "save": "Save",
     "close": "Close",
     "refresh": "Refresh",
+    "all": "All",
     "notes": "Notes",
     "description": "Description",
     "no_description": "No description",
@@ -559,5 +561,71 @@
     "failedToUpdateCategory": "Failed to update category",
     "failedToDeleteCategory": "Failed to delete category",
     "failedToUpdateStatus": "Failed to update status"
+  },
+  "attendance": {
+    "title": "Attendance Management",
+    "employee": "Employee",
+    "date": "Date",
+    "checkIn": "Check In",
+    "checkOut": "Check Out",
+    "breakStart": "Break Start",
+    "breakEnd": "Break End",
+    "totalHours": "Total Hours",
+    "overtimeHours": "Overtime Hours",
+    "status": "Status",
+    "department": "Department",
+    "notes": "Notes",
+    "location": "Location",
+    "ipAddress": "IP Address",
+    "present": "Present",
+    "late": "Late",
+    "absent": "Absent",
+    "halfDay": "Half Day",
+    "leave": "Leave",
+    "total": "Total",
+    "searchPlaceholder": "Search employees...",
+    "statusFilter": "Filter by status",
+    "departmentFilter": "Filter by department",
+    "addAttendance": "Add Attendance",
+    "editAttendance": "Edit Attendance",
+    "selectEmployee": "Select employee",
+    "employeeRequired": "Please select an employee",
+    "dateRequired": "Please select a date",
+    "statusRequired": "Please select a status",
+    "createdSuccessfully": "Attendance created successfully",
+    "updatedSuccessfully": "Attendance updated successfully",
+    "deletedSuccessfully": "Attendance deleted successfully",
+    "failedToSave": "Failed to save attendance",
+    "failedToDelete": "Failed to delete attendance",
+    "deleteConfirm": "Are you sure you want to delete this attendance record?",
+    "records": "records",
+    "noAttendances": "No attendance records found"
+  },
+  "dashboard": {
+    "title": "Dashboard",
+    "error": "Error loading dashboard data",
+    "totalEmployees": "Total Employees",
+    "activeProjects": "Active Projects",
+    "totalExpenses": "Total Expenses",
+    "totalPayroll": "Total Payroll",
+    "todayAttendance": "Today's Attendance",
+    "projectProgress": "Project Progress",
+    "completionRate": "Completion Rate",
+    "employeeStats": "Employee Statistics",
+    "newThisMonth": "New This Month",
+    "financeOverview": "Finance Overview",
+    "monthlyExpenses": "Monthly Expenses",
+    "monthlyPayroll": "Monthly Payroll",
+    "projectStatus": "Project Status",
+    "active": "Active",
+    "completed": "Completed",
+    "overdue": "Overdue",
+    "total": "Total",
+    "recentActivities": "Recent Activities",
+    "quickActions": "Quick Actions",
+    "addEmployee": "Add Employee",
+    "createProject": "Create Project",
+    "addExpense": "Add Expense",
+    "viewAttendance": "View Attendance"
   }
 } 
