--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -85,6 +85,7 @@
   "logoutFailed": "Đăng xuất thất bại!",
   "common": {
     "actions": "Thao tác",
+    "view": "Xem",
     "edit": "Chỉnh sửa",
     "cancel": "Hủy",
     "yes": "Có",
@@ -95,6 +96,7 @@
     "save": "Lưu",
     "close": "Đóng",
     "refresh": "Làm mới",
+    "all": "Tất cả",
     "notes": "Ghi chú",
     "description": "Mô tả",
     "no_description": "Không có mô tả",
@@ -559,5 +561,71 @@
     "failedToUpdateCategory": "Cập nhật danh mục thất bại",
     "failedToDeleteCategory": "Xóa danh mục thất bại",
     "failedToUpdateStatus": "Cập nhật trạng thái thất bại"
+  },
+  "attendance": {
+    "title": "Quản lý chấm công",
+    "employee": "Nhân viên",
+    "date": "Ngày",
+    "checkIn": "Giờ vào",
+    "checkOut": "Giờ ra",
+    "breakStart": "Bắt đầu nghỉ",
+    "breakEnd": "Kết thúc nghỉ",
+    "totalHours": "Tổng giờ",
+    "overtimeHours": "Giờ làm thêm",
+    "status": "Trạng thái",
+    "department": "Phòng ban",
+    "notes": "Ghi chú",
+    "location": "Vị trí",
+    "ipAddress": "Địa chỉ IP",
+    "present": "Có mặt",
+    "late": "Muộn",
+    "absent": "Vắng",
+    "halfDay": "Nửa ngày",
+    "leave": "Nghỉ phép",
+    "total": "Tổng cộng",
+    "searchPlaceholder": "Tìm kiếm nhân viên...",
+    "statusFilter": "Lọc theo trạng thái",
+    "departmentFilter": "Lọc theo phòng ban",
+    "addAttendance": "Thêm chấm công",
+    "editAttendance": "Sửa chấm công",
+    "selectEmployee": "Chọn nhân viên",
+    "employeeRequired": "Vui lòng chọn nhân viên",
+    "dateRequired": "Vui lòng chọn ngày",
+    "statusRequired": "Vui lòng chọn trạng thái",
+    "createdSuccessfully": "Thêm chấm công thành công",
+    "updatedSuccessfully": "Cập nhật chấm công thành công",
+    "deletedSuccessfully": "Xóa chấm công thành công",
+    "failedToSave": "Không thể lưu chấm công",
+    "failedToDelete": "Không thể xóa chấm công",
+    "deleteConfirm": "Bạn có chắc chắn muốn xóa bản ghi chấm công này?",
+    "records": "bản ghi",
+    "noAttendances": "Không tìm thấy bản ghi chấm công"
+  },
+  "dashboard": {
+    "title": "Bảng điều khiển",
+    "error": "Lỗi tải dữ liệu bảng điều khiển",
+    "totalEmployees": "Tổng nhân viên",
+    "activeProjects": "Dự án đang hoạt động",
+    "totalExpenses": "Tổng chi phí",
+    "totalPayroll": "Tổng lương",
+    "todayAttendance": "Chấm công hôm nay",
+    "projectProgress": "Tiến độ dự án",
+    "completionRate": "Tỷ lệ hoàn thành",
+    "employeeStats": "Thống kê nhân viên",
+    "newThisMonth": "Mới trong tháng",
+    "financeOverview": "Tổng quan tài chính",
+    "monthlyExpenses": "Chi phí tháng",
+    "monthlyPayroll": "Lương tháng",
+    "projectStatus": "Trạng thái dự án",
+    "active": "Đang hoạt động",
+    "completed": "Hoàn thành",
+    "overdue": "Quá hạn",
+    "total": "Tổng cộng",
+    "recentActivities": "Hoạt động gần đây",
+    "quickActions": "Thao tác nhanh",
+    "addEmployee": "Thêm nhân viên",
+    "createProject": "Tạo dự án",
+    "addExpense": "Thêm chi phí",
+    "viewAttendance": "Xem chấm công"
   }
 } 
