--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -235,6 +235,9 @@
     "marked_as_paid_successfully": "Expense marked as paid successfully",
     "payment_failed": "Failed to mark expense as paid",
     "delete_confirm": "Are you sure you want to delete this expense?",
+    "export_csv": "Export CSV",
+    "exportSuccess": "Expense report exported successfully",
+    "exportError": "Failed to export expense report",
     "no_expenses": "No expenses found",
     "search_placeholder": "Search expenses...",
     "filter_by_status": "Filter by status",
@@ -627,5 +630,95 @@
     "createProject": "Create Project",
     "addExpense": "Add Expense",
     "viewAttendance": "View Attendance"
+  },
+  "analytics": {
+    "title": "Advanced Analytics & Reporting",
+    "overview": "Overview",
+    "employee_analytics": "Employee Analytics",
+    "financial_analytics": "Financial Analytics",
+    "project_analytics": "Project Analytics",
+    "attendance_analytics": "Attendance Analytics",
+    "trend_analysis": "Trend Analysis",
+    "total_employees": "Total Employees",
+    "active_projects": "Active Projects",
+    "total_expenses": "Total Expenses",
+    "attendance_rate": "Attendance Rate",
+    "project_completion_rate": "Project Completion Rate",
+    "revenue_growth": "Revenue Growth",
+    "performance_distribution": "Performance Distribution",
+    "productivity_trends": "Productivity Trends",
+    "skill_gaps": "Skill Gaps",
+    "technical_skills": "Technical Skills",
+    "soft_skills": "Soft Skills",
+    "certifications": "Certifications",
+    "revenue_trends": "Revenue Trends",
+    "expense_categories": "Expense Categories",
+    "profit_margins": "Profit Margins",
+    "profit_margin_description": "Current profit margin percentage",
+    "cash_flow_analysis": "Cash Flow Analysis",
+    "operating": "Operating",
+    "investing": "Investing",
+    "financing": "Financing",
+    "project_status_distribution": "Project Status Distribution",
+    "timeline_performance": "Timeline Performance",
+    "cost_variance": "Cost Variance",
+    "resource_utilization": "Resource Utilization",
+    "utilization_rate": "Utilization Rate",
+    "overallocation": "Overallocation",
+    "underallocation": "Underallocation",
+    "attendance_trends": "Attendance Trends",
+    "department_comparison": "Department Comparison",
+    "attendance_patterns": "Attendance Patterns",
+    "overtime_analysis": "Overtime Analysis",
+    "total_overtime_hours": "Total Overtime Hours",
+    "average_overtime_per_employee": "Average Overtime per Employee",
+    "overtime_cost": "Overtime Cost",
+    "early_arrivals": "Early Arrivals",
+    "on_time": "On Time",
+    "late_arrivals": "Late Arrivals",
+    "employee_growth": "Employee Growth",
+    "project_completion": "Project Completion",
+    "employee_kpis": "Employee KPIs",
+    "financial_kpis": "Financial KPIs",
+    "project_kpis": "Project KPIs",
+    "operational_kpis": "Operational KPIs",
+    "employee_satisfaction": "Employee Satisfaction",
+    "turnover_rate": "Turnover Rate",
+    "training_completion": "Training Completion",
+    "performance_average": "Performance Average",
+    "profit_margin": "Profit Margin",
+    "expense_ratio": "Expense Ratio",
+    "cash_flow_ratio": "Cash Flow Ratio",
+    "project_completion_rate": "Project Completion Rate",
+    "on_time_delivery": "On-Time Delivery",
+    "budget_adherence": "Budget Adherence",
+    "customer_satisfaction": "Customer Satisfaction",
+    "productivity_index": "Productivity Index",
+    "quality_score": "Quality Score",
+    "resource_utilization": "Resource Utilization",
+    "export_report": "Export Report",
+    "period": {
+      "week": "Week",
+      "month": "Month",
+      "quarter": "Quarter",
+      "year": "Year"
+    },
+    "performance": {
+      "excellent": "Excellent",
+      "good": "Good",
+      "average": "Average",
+      "below_average": "Below Average"
+    },
+    "project_status": {
+      "active": "Active",
+      "completed": "Completed",
+      "on_hold": "On Hold",
+      "cancelled": "Cancelled"
+    },
+    "under_budget": "Under Budget",
+    "on_budget": "On Budget",
+    "over_budget": "Over Budget",
+    "ahead_of_schedule": "Ahead of Schedule",
+    "delayed": "Delayed"
   }
 } 
