--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -235,6 +235,9 @@
     "marked_as_paid_successfully": "Đánh dấu đã thanh toán thành công",
     "payment_failed": "Đánh dấu đã thanh toán thất bại",
     "delete_confirm": "Bạn có chắc muốn xóa chi phí này?",
+    "export_csv": "Xuất CSV",
+    "exportSuccess": "Xuất báo cáo chi phí thành công",
+    "exportError": "Xuất báo cáo chi phí thất bại",
     "no_expenses": "Không tìm thấy chi phí",
     "search_placeholder": "Tìm kiếm chi phí...",
     "filter_by_status": "Lọc theo trạng thái",
