--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -90,6 +90,8 @@
     "cancel": "Cancel",
     "yes": "Yes",
     "no": "No",
+    "active": "Active",
+    "inactive": "Inactive",
     "create": "Create",
     "update": "Update",
     "delete": "Delete",
@@ -834,6 +836,38 @@
         "description": "Start by adding your first guest to the system"
       },
       "visits": "No visits recorded"
+    }
+  },
+  "holiday": {
+    "management": {
+      "title": "Holiday Management"
+    },
+    "add": "Add Holiday",
+    "add.title": "Add New Holiday",
+    "edit.title": "Edit Holiday",
+    "delete": {
+      "confirm": "Are you sure you want to delete this holiday?"
+    },
+    "form": {
+      "name": "Holiday Name",
+      "date": "Date",
+      "type": "Type",
+      "description": "Description",
+      "is_paid": "Is Paid",
+      "is_active": "Is Active"
+    },
+    "table": {
+      "name": "Name",
+      "date": "Date",
+      "type": "Type",
+      "description": "Description",
+      "is_paid": "Paid",
+      "status": "Status"
+    },
+    "type": {
+      "national": "National",
+      "company": "Company",
+      "regional": "Regional"
     }
   }
 } 
