--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -869,5 +869,159 @@
       "company": "Company",
       "regional": "Regional"
     }
+  },
+  "search": {
+    "placeholder": "Search projects, employees, documents...",
+    "no_results": "No results found",
+    "searching": "Searching...",
+    "type": {
+      "project": "Project",
+      "employee": "Employee",
+      "document": "Document",
+      "task": "Task",
+      "meeting": "Meeting"
+    }
+  },
+  "theme": {
+    "light": "Light Mode",
+    "dark": "Dark Mode",
+    "toggle": "Toggle Theme"
+  },
+  "accessibility": {
+    "skip_to_content": "Skip to main content",
+    "menu": "Main navigation menu",
+    "search": "Search functionality",
+    "notifications": "Notifications"
+  },
+  "rbac": {
+    "title": "Access Control",
+    "management": {
+      "title": "Role-Based Access Control",
+      "description": "Manage roles, permissions, and access control for your system"
+    },
+    "tabs": {
+      "roles": "Roles",
+      "permissions": "Permissions",
+      "user_assignment": "User Assignment",
+      "audit_logs": "Audit Logs"
+    },
+    "roles": {
+      "title": "Roles Management",
+      "description": "Create and manage user roles with specific permissions",
+      "create": "Create Role",
+      "create_title": "Create New Role",
+      "edit_title": "Edit Role",
+      "basic_info": "Basic Information",
+      "permissions": "Permissions",
+      "permissions_description": "Select the permissions that this role should have",
+      "create_success": "Role created successfully",
+      "update_success": "Role updated successfully",
+      "delete_success": "Role deleted successfully",
+      "create_error": "Failed to create role",
+      "update_error": "Failed to update role",
+      "delete_error": "Failed to delete role",
+      "delete_confirm": "Are you sure you want to delete this role?",
+      "form": {
+        "name": "Role Name",
+        "name_required": "Role name is required",
+        "name_max": "Role name cannot exceed 255 characters",
+        "name_placeholder": "Enter role name",
+        "description": "Description",
+        "description_placeholder": "Enter role description",
+        "status": "Status",
+        "active": "Active"
+      },
+      "table": {
+        "name": "Name",
+        "description": "Description",
+        "permissions": "Permissions",
+        "status": "Status",
+        "actions": "Actions"
+      },
+      "actions": {
+        "view": "View details",
+        "edit": "Edit role",
+        "delete": "Delete role"
+      }
+    },
+    "permissions": {
+      "title": "Permissions Management",
+      "description": "Manage system permissions organized by modules",
+      "create": "Create Permission",
+      "create_title": "Create New Permission",
+      "edit_title": "Edit Permission",
+      "basic_info": "Basic Information",
+      "create_success": "Permission created successfully",
+      "update_success": "Permission updated successfully",
+      "delete_success": "Permission deleted successfully",
+      "create_error": "Failed to create permission",
+      "update_error": "Failed to update permission",
+      "delete_error": "Failed to delete permission",
+      "delete_confirm": "Are you sure you want to delete this permission?",
+      "form": {
+        "name": "Permission Name",
+        "name_required": "Permission name is required",
+        "name_max": "Permission name cannot exceed 255 characters",
+        "name_placeholder": "Enter permission name",
+        "description": "Description",
+        "description_placeholder": "Enter permission description",
+        "module": "Module",
+        "module_required": "Module is required",
+        "module_placeholder": "Select module",
+        "status": "Status",
+        "active": "Active"
+      },
+      "table": {
+        "name": "Name",
+        "description": "Description",
+        "module": "Module",
+        "status": "Status",
+        "actions": "Actions"
+      },
+      "actions": {
+        "view": "View details",
+        "edit": "Edit permission",
+        "delete": "Delete permission"
+      }
+    },
+    "user_assignment": {
+      "title": "User Role Assignment",
+      "description": "Assign roles to users to control their access permissions",
+      "success": "Roles assigned successfully",
+      "error": "Failed to assign roles",
+      "table": {
+        "user": "User",
+        "roles": "Current Roles",
+        "actions": "Actions"
+      },
+      "actions": {
+        "edit": "Edit roles",
+        "edit_roles": "Edit Roles"
+      },
+      "modal": {
+        "title": "Assign Roles to User",
+        "select_roles": "Select Roles",
+        "placeholder": "Select roles to assign",
+        "current_roles": "Current Roles:"
+      }
+    },
+    "audit_logs": {
+      "title": "Audit Logs",
+      "description": "Track all system activities and security events",
+      "table": {
+        "timestamp": "Timestamp",
+        "user": "User",
+        "action": "Action",
+        "target": "Target",
+        "details": "Details",
+        "ip": "IP Address"
+      },
+      "filters": {
+        "action": "Action",
+        "table": "Table",
+        "start_date": "Start Date",
+        "end_date": "End Date"
+      }
+    }
   }
 } 
